--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,17 @@
-<h2 id="title">Welcome to Ember</h2>
-
-{{outlet}}
+<div class="container">
+  <div class="page-header">
+    <h1>Rock &amp; Roll<small> with Ember.js</small></h1>
+  </div>
+  <div class="row">
+    <div class="rol-md-6">
+      <ul class="list-group songs">
+        {{#each model as |song|}}
+          <li class="list-group-item">
+            {{song.title}}, by <em>{{song.band}}</em>
+            <span class="rating pull-right">{{song.rating}}</span>
+          </li>
+        {{/each}}
+      </ul>
+    </div>
+  </div>
+</div>
