--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -1,12 +1,24 @@
 <ul class="list-group songs">
+  {{#if canCreateSongs}}
   <li class="list-group-item">
-    {{input type="text" class="new-song" placeholder="New song" value=title}}
-    <button class="btn btn-primary btn-sm new-song-button" {{action "createSong"}}>Add</button>
+    <form class="new-song-form" {{action "createSong" on="submit"}}>
+      {{input type="text" class="new-song" placeholder="New song" value=title}}
+      <button type="submit" class="btn btn-primary btn-sm new-song-button">Add</button>
+    </form>
   </li>
+  {{/if}}
   {{#each model.songs as |song|}}
     <li class="list-group-item song">
       {{song.title}}
       {{star-rating rating=song.rating item=song on-click=(action "updateRating")}}
     </li>
   {{/each}}
+
+  {{#unless canCreateSongs}}
+    <li class="list-group-item empty-list">
+      <div class="empty-message">
+        There are no songs yet. Why don't you <a href="#" {{action "enableSongCreation"}}>create one?</a>
+      </div>
+    </li>
+  {{/unless}}
 </ul>
