--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="page-header">
-    <h1>Rock &amp; Roll<small> with Ember.js</small></h1>
+    {{#link-to 'index'}}
+      <h1>Rock &amp; Roll<small> with Ember.js</small></h1>
+    {{/link-to}}
   </div>
   <div class="row">
     {{outlet}}
